crates/ink/tests/ui/trait_def/fail/definition_unsafe.stderr
error: ink! trait definitions cannot be unsafe
 --> tests/ui/trait_def/fail/definition_unsafe.rs:4:5
  |
4 | pub unsafe trait TraitDefinition {
  |     ^^^^^^
